--- a/w10_web/flask/templates/h_index.html
+++ b/w10_web/flask/templates/h_index.html
@@ -8,7 +8,7 @@
          {% if messages %}
             <ul>
                {% for message in messages %}
-               <li<{{ message }}</li>
+               <li>{{ message }}</li>
                {% endfor %}
             </ul>
          {% endif %}
